fix(launch): add java parameters